[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/environment/coins/insomnia_coin_03.png" type="Texture" id=1]
[ext_resource path="res://assets/environment/coins/insomnia_coin_01.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/coins/insomnia_coin_04.png" type="Texture" id=3]
[ext_resource path="res://assets/environment/coins/insomnia_coin_02.png" type="Texture" id=4]
[ext_resource path="res://assets/environment/coins/insomnia_coin_05.png" type="Texture" id=5]
[ext_resource path="res://scripts/insomnia_coin.gd" type="Script" id=6]
[ext_resource path="res://assets/music/fx/collected.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 42.3813

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "shine",
"speed": 20.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "bounce"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -85 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="insomnia_coin" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "shine"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 3 )

[node name="AudioStreamPlayer2DCollected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0
[connection signal="body_entered" from="." to="." method="_on_insomnia_coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
